--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,13 @@
+/* RESET */
+
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
+
+/* HEADER */
 
 header{
   width: 100%;
@@ -34,6 +38,8 @@ header{
   display: none;
 }
 
+/* BANNER */
+
 .banner-section{
   background-image: url(../src/assets/images/accounting.jpg);
   width: 100%;
@@ -46,10 +52,56 @@ header{
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 150px 150px;
+  padding: 80px 80px;
 }
 
 .banner-container h2{
   text-transform: uppercase;
+  font-size: 30px;
+  font-weight: 800;
+}
+
+.banner-container p{
+  padding-top: 20px;
+}
+
+.about-us-section{
+  width: 100%;
+  background-color: #82C0CC;
+
+}
+
+.about-us-container{
+  display: block;
+  padding: 20px 20px
+}
+
+.about-us-title, .about-us-description{
+  padding: 10px 0;
+  text-align: center;
+}
+
+.profile-container {
+  padding: 20px 20px;
+  display: flex;
+  gap: 2em;
+}
+
+.profile-element h3, p{
+  padding-top: 20px;
+  text-align: center;
+}
+
+.image-container{
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+
+.profile-image{
+  height: 230px;
+  border-radius: 10%;
+  box-shadow: 0 6px 20px rgba(0.2, 0.2, 0, 0.9);
 }
 
