--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,33 @@ header{
   text-transform: capitalize;
   margin-right: 10px;
   color: black;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  overflow: hidden;
+}
+
+.menu a::before{
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 51%;
+  right: 51%;
+  bottom: 0;
+  background: #82C0CC;
+  height: 4px;
+  -webkit-transition-property: left, right;
+  transition-property: left, right;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+
+.menu a:hover::before, .menu a:focus::before, .menu:active::before {
+  left: 0;
+  right: 0;
 }
 
 .hamburguer-icon, .cross-icon, #check-button{
