--- a/src/index.css
+++ b/src/index.css
@@ -61,13 +61,24 @@ header{
   right: 0;
 }
 
-.hamburguer-icon, .cross-icon, #check-button{
+.hamburguer-icon{
+  order: 1;
+}
+
+.hamburguer-icon, .cross-icon{
   display: none;
+}
+
+.hamburguer-icon, .cross-icon{
+  font-size: 30px;
+  cursor: pointer;
+  padding: 0 10px;
+  transition: 0.4s;
 }
 
 /* BANNER */
 
-.banner-section{
+#banner-section{
   background-image: url(../src/assets/images/accounting.jpg);
   width: 100%;
   height: 50vh;
@@ -92,7 +103,9 @@ header{
   padding-top: 20px;
 }
 
-.about-us-section{
+/* ABOUT US */
+
+#about-us-section{
   width: 100%;
   background-color: #82C0CC;
 
@@ -130,5 +143,93 @@ header{
   height: 230px;
   border-radius: 10%;
   box-shadow: 0 6px 20px rgba(0.2, 0.2, 0, 0.9);
+}
+
+#services-section{
+  background: #489FB5;
+}
+
+#services-section h2{
+  padding-top: 20px;
+  text-align: center;
+}
+
+.services-container{
+  padding: 20px 20px;
+  display: flex;
+  gap: 2em;
+}
+
+.icon-container{
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+.services-element h3, p{
+  padding-top: 20px;
+  text-align: center;
+}
+
+/* FOOTER */
+
+#footer{
+  background: #ede7e3;
+  width: 100%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.2em;
+  padding: 5px 0 
+}
+
+#footer a{
+  text-decoration: none;
+  color: black;
+  font-weight: 900;
+}
+
+#footer a:hover{
+  cursor: pointer;
+  color:#489FB5;
+  text-decoration: underline;
+}
+
+/* RESPONSIVE */
+
+@media(max-width: 768px){
+
+  .hamburguer-icon, .cross-icon, .menu a{
+    display: block;
+  }
+
+  .menu{
+    background: #ede7e3;
+    position: fixed;
+    width: 100%;
+    left: 0;
+    height: 100vh;
+    top: 0;
+    right: -100%;
+    z-index: 0;
+    text-align: center;
+    padding: 100px 0;
+    transition: 0.4s;
+  }
+
+  .menu a{
+    margin: 50px 50px;
+  }
+
+  .cross-icon{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+  }
+  
+  #check-button:checked ~ .menu{
+    right: 0;
+  }
+  
 }
 
