--- a/src/index.css
+++ b/src/index.css
@@ -279,6 +279,12 @@ header{
   .icon-container{
     margin-top: 10px;
   }
+
+  @media(max-width: 375px) {
+    .banner-container a{
+      padding-top: 10px;
+    }
+  }
   
 }
 
