--- a/src/index.css
+++ b/src/index.css
@@ -115,7 +115,7 @@ header{
   font-size: 20px;
 }
 
-.banner-container a{
+.arrow-down{
   text-decoration: none;
   color: black;
   padding-top: 70px;
@@ -153,14 +153,17 @@ header{
 }
 
 .profile-container {
-  padding: 20px 20px;
+  padding-bottom: 10px;
   display: flex;
+  align-content: center;
+  justify-content: space-evenly;
   gap: 2em;
 }
 
 .profile-element h3, p{
   padding-top: 20px;
   text-align: center;
+
 }
 
 .image-container{
@@ -171,8 +174,9 @@ header{
 
 
 .profile-image{
-  height: 230px;
-  border-radius: 10%;
+  width: 150px;
+  height: 150px;
+  border-radius: 100%;
   box-shadow: 0 6px 20px rgba(0.2, 0.2, 0, 0.9);
 }
 
@@ -213,6 +217,23 @@ header{
   text-align: center;
 }
 
+.contact-container{
+  padding: 20px 0;
+  background: #82C0CC;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact-container h2{
+  text-align: center;
+}
+
+.contact-container a{
+  margin-top: 20px;
+}
+
 /* FOOTER */
 
 #footer{
@@ -235,6 +256,17 @@ header{
   cursor: pointer;
   color:#489FB5;
   text-decoration: underline;
+}
+
+/** ARROW UP**/
+.arrow-up{
+  color: #002;
+  position: fixed;
+  z-index: 1;
+  bottom: 40px;
+  right: 40px;
+  background-color: #82C0CC;
+  border: 4px solid #ede7e3;
 }
 
 /* RESPONSIVE */
@@ -278,10 +310,6 @@ header{
     position: absolute;
     top: 20px;
     right: 20px;
-  }
-  
-  #check-button:checked ~ .menu{
-    right: 0;
   }
 
   .profile-container{
